syntax = "proto3";

package contracts;

message GetContractDecimalRequest {
  string token = 1;
}

message GetContractDecimalResponse {
  uint32 decimals = 1;
}

message GetContractTotalSupplyRequest {
  string token = 1;
}

message GetContractTotalSupplyResponse {
  uint64 totalSupply = 1;
}

message GetContractBalanceRequest {
  string token = 1;
  string address = 2;
}

message GetContractBalanceResponse {
  uint64 balance = 1;
}

message SendContractContractTransferRequest {
  string token = 1;
  string from = 2;
  string to = 3;
  uint64 amount = 4;
}


message SendContractTransferResponse {
  string txHash = 1;
}

service ContractService {
  rpc GetContractDecimal(GetContractDecimalRequest) returns (GetContractDecimalResponse);
  rpc GetContractTotalSupply(GetContractTotalSupplyRequest) returns (GetContractTotalSupplyResponse);
  rpc GetContractBalance(GetContractBalanceRequest) returns (GetContractBalanceResponse);
  rpc SendContractTransfer(SendContractContractTransferRequest) returns (SendContractTransferResponse);
}